syntax = "proto3";
package api;
import "google/protobuf/empty.proto";

service RsLocald {
  rpc Login(LoginBody) returns (LoginReply);
  rpc Listen(google.protobuf.Empty) returns (stream RequestEntry);
  rpc FetchRequest(RequestEntry) returns (stream ProxyRequest);
  rpc PublishResponse(stream ProxyResponse) returns (google.protobuf.Empty);
}

message RequestEntry{
  string id = 1;
}

message LoginBody {
  string token = 1;
  string subdomain = 2;
}

message LoginReply {
  string endpoint = 1;
  string session_id = 2;
  string username = 3;
}

message ProxyRequest {
  string reqId = 1;
  bytes data = 2;
}

message ProxyResponse {
  string reqId = 1;
  bytes data = 2;
  bytes header = 3;
}
